# swagger-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  INFRA_AUDIT.md  README.md  agents.md  docker-compose.yml  e2e_findings.md  llm.md  logging.md  mascot.py  models.md  pyproject.toml  scout_9jauni.json
.claude/skills/onboard-test-repo/: SKILL.md
swagger_agent/: __main__.py  cache.py  config.py  dashboard.py  models.py  pipeline.py  server.py  telemetry.py  tools.py
swagger_agent/agents/route_extractor/: __init__.py  cli.py  harness.py  prompt.py  rich_output.py
swagger_agent/agents/schema_extractor/: __init__.py  cli.py  (+4 more)
swagger_agent/infra/: __main__.py  assembler.py  ctags_filter.py  ctags_patterns.py  prescan.py  prescan_cli.py  resolve.py  schema_loop.py  spec_fixer.py  validator.py
tests/: conftest.py  poc_audit_fixes.py  test_assembler.py  test_known_issues.py  test_path_param_llm.py  test_prescan.py  test_ref_hint_parsing.py  test_resolve.py
tests/e2e/: conftest.py  helpers.py  repos.json  test_instructor_crashes.py  test_known_issues.py  test_pipeline.py  test_route_extractor.py  test_schema_loop.py  test_scout.py
tests/golden/: README.md  SCORES.md  aspnetcore-realworld.json  clojure-compojure.json  dart-frog.json  flask-restplus-example.json  go-gin-ecommerce.json  haskell-servant.json  kotlin-ktor-realworld.json  laravel-realworld.json  nestjs-pg-crud.json  node-express-boilerplate.json  ocaml-dream.json  passwordless-auth-rust.json  rails-rest-api.json  rest-api-node.json  score.py  spring-boot-blog.json  swift-vapor-conduit.json
(+46 files in other folders)
