[project]
name = "swagger-agent"
version = "0.1.0"
description = "Multi-agent OpenAPI spec generator from arbitrary codebases"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "instructor>=1.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
