[project]
name = "swagger-agent"
version = "0.1.0"
description = "Multi-agent OpenAPI spec generator from arbitrary codebases"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "instructor>=1.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "openapi-spec-validator>=0.7",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring LLM server and test repos",
]
norecursedirs = ["tests/e2e/repos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
